test/type_error/unmatched_param.rqcpp
qbits q[1]

procedure P(x):
    skip

procedure main():
    P(4, 3)